--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 [Bb]uilds/
 Assets/AssetStoreTools*
 
+# Jetbrains
+.idea/
+
 # Visual Studio cache directory
 .vs/
 
@@ -34,3 +37,7 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+# mac
+.DS_Store
+
